refined fuzzing algorithm